added revoke and get balance details

--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -103,6 +103,11 @@
               </td>
             </tr>
           </ng-container>
+          <tr class="table__row--mob" *ngIf="!balances.length">
+              <td class="table__cell table__cell--tal" colspan="4">
+                No matching records found
+              </td>
+            </tr>
         </tbody>
     </table>
     <!-- </perfect-scrollbar> -->
@@ -134,7 +139,7 @@
       [ngClass]="{'tabs__item--active': currTab === Tab.PR}"
       (click)="onSelectTab.emit(Tab.PR)"
     >
-      Pending<span class="indicate">5</span>
+      Pending<span class="indicate">{{countOfPendingRequests}}</span>
     </button>
   </div>
 </div>
@@ -147,160 +152,162 @@
     </svg>
     to: All Balance
   </div>
-  <table class="table table--mob">
-    <thead class="table__head">
-    <tr class="table__head-row">
-      <th class="table__cell-head table__cell-head--tal">Currency</th>
-      <th class="table__cell-head table__cell-head--tal">Available balance</th>
-      <th class="table__cell-head table__cell-head--tar">Price</th>
-    </tr>
-    </thead>
-    <tbody class="table__body table__body--none-shadow">
-
-    <tr class="table__row--mob">
-      <td class="table__cell table__cell--tal">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="../../../assets/img/btc-icon.svg">
-          </div>
-          <div>
-            <span>{{selectedItem.currencyName}}</span>
-            <span class="balance__currency-name">{{selectedItem.currencyDescription}}</span>
-          </div>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tal">
-        <span>{{selectedItem.activeBalance}}</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <div *ngIf="priceIn === currencies.BTC">BTC {{selectedItem.btcAmount}}</div>
-        <div *ngIf="priceIn === currencies.USD">$ {{selectedItem.usdAmount}}</div>
-        <!-- <span class="txt-small txt-red">–0.24%</span> -->
-      </td>
-    </tr>
-    <tr class="table__row--mob">
-      <td class="table__cell table__cell--tal">
-        <button class="btn btn--center btn--small">Deposit</button>
-      </td>
-      <td class="table__cell table__cell--tal">
-        <button class="btn btn--center btn--small">Withdraw</button>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <button class="btn btn--center btn--small">Transfer</button>
-      </td>
-    </tr>
-    </tbody>
-  </table>
-  <div class="open-mob-balance__row">
-    <div class="open-mob-balance__title">Price</div>
-    <div class="open-mob-balance__value">
-      BTC {{selectedItem.btcAmount}} / <span class="txt-green">$ {{selectedItem.usdAmount}}</span>
-    </div>
-  </div>
-  <div class="open-mob-balance__row">
-    <div class="open-mob-balance__title">Аvailable</div>
-    <div class="open-mob-balance__value">{{selectedItem.activeBalance}}</div>
-  </div>
-
-  <div>
-    <div 
-      class="open-mob-balance__row" 
-      (click)="onTogglePanels('on_confirmation')"
-      [ngClass]="{'open-mob-balance__row--open': showOnConfirmation}"
-    >
-      <div class="open-mob-balance__title">On confirmation</div>
-      <div class="open-mob-balance__value">{{selectedItem.onConfirmation}}</div>
-      <div class="open-mob-balance__arr">
-        <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-      </div>
-    </div>
-    <div class="table__details" *ngIf="showOnConfirmation">
-      <div class="table__details-cell">
-        <div class="table__details-item">
-          <div class="table__details-item-title">
-            <div class="counter">
-              <span>4</span>
-              /
-              <span>5</span>
+  <ng-container *ngIf="!!selectedItem">
+    <table class="table table--mob">
+      <thead class="table__head">
+      <tr class="table__head-row">
+        <th class="table__cell-head table__cell-head--tal">Currency</th>
+        <th class="table__cell-head table__cell-head--tal">Available balance</th>
+        <th class="table__cell-head table__cell-head--tar">Price</th>
+      </tr>
+      </thead>
+      <tbody class="table__body table__body--none-shadow">
+  
+      <tr class="table__row--mob">
+        <td class="table__cell table__cell--tal">
+          <div class="balance__currency">
+            <div class="balance__currency-icon">
+              <img src="../../../assets/img/btc-icon.svg">
+            </div>
+            <div>
+              <span>{{selectedItem.currencyName}}</span>
+              <span class="balance__currency-name">{{selectedItem.currencyDescription}}</span>
             </div>
           </div>
-          <div class="table__details-item-value"><span>0.00074</span> to deposit</div>
+        </td>
+        <td class="table__cell table__cell--tal">
+          <span>{{selectedItem.activeBalance}}</span>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <div *ngIf="priceIn === currencies.BTC">BTC {{selectedItem.btcAmount}}</div>
+          <div *ngIf="priceIn === currencies.USD">$ {{selectedItem.usdAmount}}</div>
+          <!-- <span class="txt-small txt-red">–0.24%</span> -->
+        </td>
+      </tr>
+      <tr class="table__row--mob">
+        <td class="table__cell table__cell--tal">
+          <button class="btn btn--center btn--small">Deposit</button>
+        </td>
+        <td class="table__cell table__cell--tal">
+          <button class="btn btn--center btn--small">Withdraw</button>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <button class="btn btn--center btn--small">Transfer</button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+    <div class="open-mob-balance__row">
+      <div class="open-mob-balance__title">Price</div>
+      <div class="open-mob-balance__value">
+        BTC {{selectedItem.btcAmount}} / <span class="txt-green">$ {{selectedItem.usdAmount}}</span>
+      </div>
+    </div>
+    <div class="open-mob-balance__row">
+      <div class="open-mob-balance__title">Аvailable</div>
+      <div class="open-mob-balance__value">{{selectedItem.activeBalance}}</div>
+    </div>
+  
+    <div>
+      <div 
+        class="open-mob-balance__row" 
+        (click)="onTogglePanels('on_confirmation')"
+        [ngClass]="{'open-mob-balance__row--open': showOnConfirmation}"
+      >
+        <div class="open-mob-balance__title">On confirmation</div>
+        <div class="open-mob-balance__value">{{selectedItem.onConfirmation}}</div>
+        <div class="open-mob-balance__arr">
+          <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
         </div>
-        <div class="table__details-item">
-          <div class="table__details-item-title">Adress</div>
-          <div class="table__details-item-value">
-            <a href="#" class="open-mob-balance__code">1LUaz5g9xSM4W3zBZQFnghmxPw14AFcByz</a>
+      </div>
+      <div class="table__details" *ngIf="showOnConfirmation">
+        <div class="table__details-cell" *ngFor="let confirm of selectedItem.confirmations">
+          <div class="table__details-item">
+            <div class="table__details-item-title">
+              <div class="counter">
+                <span>{{confirm.collectedConfirmations}}</span>
+                /
+                <span>{{confirm.neededConfirmations || '1'}}</span>
+              </div>
+            </div>
+            <div class="table__details-item-value"><span>{{confirm.amount}}</span> to deposit</div>
           </div>
-        </div>
-        <div class="table__details-item">
-          <div class="table__details-item-title">Txid</div>
-          <div class="table__details-item-value">
-            <a href="#" class="open-mob-balance__code">e524e8d969b44d12c56d07fc14c748301762ecda6733bf56b3b35e77a6e405c1</a>
-          </div>
-        </div>
-        <div class="table__details-item">
-          <div class="table__details-item-title">
-            <div class="counter">
-              <span>3</span>
-              /
-              <span>5</span>
+          <div class="table__details-item">
+            <div class="table__details-item-title">Address</div>
+            <div class="table__details-item-value">
+              <a href="#" class="open-mob-balance__code" disabled>{{confirm.address}}</a>
             </div>
           </div>
-          <div class="table__details-item-value"><span>4.96600</span> to withdraw</div>
+          <div class="table__details-item">
+            <div class="table__details-item-title">Txid</div>
+            <div class="table__details-item-value">
+              <a href="#" class="open-mob-balance__code">{{confirm.hash}}</a>
+            </div>
+          </div>
+          <!-- <div class="table__details-item">
+            <div class="table__details-item-title">
+              <div class="counter">
+                <span>3</span>
+                /
+                <span>5</span>
+              </div>
+            </div>
+            <div class="table__details-item-value"><span>4.96600</span> to withdraw</div>
+          </div> -->
         </div>
       </div>
     </div>
-  </div>
-
-  <div>
-    <div 
+  
+    <div>
+      <div 
+        class="open-mob-balance__row"
+        (click)="onTogglePanels('reserve')"
+        [ngClass]="{'open-mob-balance__row--open': showReserve}"
+      >
+        <div class="open-mob-balance__title">Reserve</div>
+        <div class="open-mob-balance__value">{{selectedItem.reservedBalance}}</div>
+        <div class="open-mob-balance__arr">
+          <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </div>
+      </div>
+      <div class="table__details" *ngIf="showReserve">
+        <div class="table__details-cell">
+          <div class="table__details-item">
+            <div class="table__details-item-title">
+              Orders
+            </div>
+            <div class="table__details-item-value">{{selectedItem.reservedByOrders}}</div>
+          </div>
+          <div class="table__details-item">
+            <div class="table__details-item-title">Withdraw</div>
+            <div class="table__details-item-value">{{selectedItem.reservedByMerchant}}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <!-- <div 
       class="open-mob-balance__row"
-      (click)="onTogglePanels('reserve')"
-      [ngClass]="{'open-mob-balance__row--open': showReserve}"
     >
-      <div class="open-mob-balance__title">Reserve</div>
-      <div class="open-mob-balance__value">{{selectedItem.reservedBalance}}</div>
+      <div class="open-mob-balance__title">History</div>
       <div class="open-mob-balance__arr">
-        <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <svg width="12" height="11" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M5.24264 0.757359L9.48528 5L5.24264 9.24264" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </div>
+    </div> -->
+    <div class="open-mob-balance__btn-wrap">
+      <a class="widget__buy-sell-btn widget__buy-sell-btn--green"
+        (click)="onBuyCurrency.emit(getMarketPair)"
+      >Buy BTC</a>
+      <a class="widget__buy-sell-btn widget__buy-sell-btn--red"
+        (click)="onBuyCurrency.emit(getMarketPair)"
+      >Sell BTC</a>
     </div>
-    <div class="table__details" *ngIf="showReserve">
-      <div class="table__details-cell">
-        <div class="table__details-item">
-          <div class="table__details-item-title">
-            Orders
-          </div>
-          <div class="table__details-item-value">{{selectedItem.reservedByOrders}}</div>
-        </div>
-        <div class="table__details-item">
-          <div class="table__details-item-title">Withdraw</div>
-          <div class="table__details-item-value">{{selectedItem.reservedByMerchant}}</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- <div 
-    class="open-mob-balance__row"
-  >
-    <div class="open-mob-balance__title">History</div>
-    <div class="open-mob-balance__arr">
-      <svg width="12" height="11" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M5.24264 0.757359L9.48528 5L5.24264 9.24264" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-    </div>
-  </div> -->
-  <div class="open-mob-balance__btn-wrap">
-    <a class="widget__buy-sell-btn widget__buy-sell-btn--green"
-      (click)="onBuyCurrency.emit(getMarketPair)"
-    >Buy BTC</a>
-    <a class="widget__buy-sell-btn widget__buy-sell-btn--red"
-      (click)="onBuyCurrency.emit(getMarketPair)"
-    >Sell BTC</a>
-  </div>
+  </ng-container>
 </div>
 <!--open mob-balance end-->
