--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -5,12 +5,13 @@
       <app-balance-mob 
         *ngSwitchCase="Tab.CRYPTO"
         [balances]="cryptoBalances$ | async"
+        [countOfPendingRequests]="countOfPendingRequests$ | async"
+        [selectedItem]="selectedBalance$ | async"
         [countPerPage]="countPerPage"
         [countOfEntries]="getCountOfEntries() | async"
         [currentPage]="currentPage"  
         [Tab]="Tab"
         [currTab]="currTab"
-        [hideAllZero]="hideAllZero"
         [cryptoCurrenciesForChoose]="cryptoCurrenciesForChoose$ | async"
         [fiatCurrenciesForChoose]="fiatCurrenciesForChoose$ | async"
         (onToggleAllZero)="onToggleAllZero($event)"
@@ -20,16 +21,18 @@
         (onSelectTab)="onSelectTab($event)"
         (filterByCurrencyForMobile)="filterByCurrencyForMobile($event)"
         (onBuyCurrency)="onBuyCurrency($event)"
+        (onLoadBalanceConfirmInfo)="onLoadBalanceConfirmInfo($event)"
       ></app-balance-mob>
       <app-balance-mob 
         *ngSwitchCase="Tab.FIAT"
         [balances]="fiatBalances$ | async"
+        [countOfPendingRequests]="countOfPendingRequests$ | async"
+        [selectedItem]="selectedBalance$ | async"
         [countPerPage]="countPerPage"
         [countOfEntries]="getCountOfEntries() | async"
         [currentPage]="currentPage"  
         [Tab]="Tab"
         [currTab]="currTab"
-        [hideAllZero]="hideAllZero"
         [cryptoCurrenciesForChoose]="cryptoCurrenciesForChoose$ | async"
         [fiatCurrenciesForChoose]="fiatCurrenciesForChoose$ | async"
         (onToggleAllZero)="onToggleAllZero($event)"
@@ -39,6 +42,7 @@
         (onSelectTab)="onSelectTab($event)"
         (filterByCurrencyForMobile)="filterByCurrencyForMobile($event)"
         (onBuyCurrency)="onBuyCurrency($event)"
+        (onLoadBalanceConfirmInfo)="onLoadBalanceConfirmInfo($event)"
       ></app-balance-mob>
       <app-pending-request-mob 
         *ngSwitchCase="Tab.PR"
@@ -52,6 +56,7 @@
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
         (onSelectTab)="onSelectTab($event)"
+        (onRevokePendingRequest)="onRevokePendingRequest($event)"
       ></app-pending-request-mob>
     </ng-container>
   </div>
@@ -188,6 +193,7 @@
         [countOfEntries]="getCountOfEntries() | async"  
         [currentPage]="currentPage"  
         (onPaginate)="onPageChanged($event)"
+        (onRevokePendingRequest)="onRevokePendingRequest($event)"
         *ngSwitchCase="Tab.PR"
       ></app-pending-request-table>
     </ng-container>
