--- a/src/app/funds/balance/balance-table/balance-table.component.html
+++ b/src/app/funds/balance/balance-table/balance-table.component.html
@@ -70,7 +70,7 @@
   </table>
 
   <!--paginator start-->
-  <div class="row row--aic" style="margin: 0 16px;">
+  <div class="row row--aic balance__paginator">
     <app-page-items-dropdown
       [countPerPage]="countPerPage"
       [countOfEntries]="countOfEntries"
