--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -105,7 +105,7 @@
             </tr>
           </ng-container>
           <tr class="table__row--mob" *ngIf="!balances.length">
-              <td class="table__cell table__cell--tal" colspan="4">
+              <td class="table__cell table__cell--tac" colspan="4">
                 No matching records found
               </td>
             </tr>
