--- a/src/app/funds/balance/balance-table/balance-table.component.scss
+++ b/src/app/funds/balance/balance-table/balance-table.component.scss
@@ -95,7 +95,7 @@
 }
 ::ng-deep .ng-select {
   .ng-select-container {
-    width: 100px !important;
+    //width: 74px !important;
     margin: 0 auto !important;
     height: 45px !important;
     background-color: transparent !important;
