--- a/src/app/funds/balance/pending-request-mob/pending-request-mob.component.html
+++ b/src/app/funds/balance/pending-request-mob/pending-request-mob.component.html
@@ -73,7 +73,7 @@
             </tr>
           </ng-container>
           <tr class="table__row--mob" *ngIf="!pendingRequests.length">
-            <td class="table__cell table__cell--tal" colspan="4">
+            <td class="table__cell table__cell--taс" colspan="4">
               No matching records found
             </td>
           </tr>
