--- a/src/assets/scss/pages/_balance.scss
+++ b/src/assets/scss/pages/_balance.scss
@@ -204,7 +204,7 @@
     &__btn-wrap {
       display: flex;
       width: 100%;
-      position: relative;
+      position: absolute;
       bottom: 0;
     }
   }
@@ -376,6 +376,7 @@
         height: 1px;
         background-color: $grey;
       }
+
       .toggler {
         margin-right: 12px;
         margin-left: 0;
