--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -13,93 +13,100 @@
         Filters
       </div>
     </div>
-    <table class="table table--mob">
-      <thead class="table__head">
-        <tr class="table__head-row">
-          <th class="table__cell-head table__cell-head--tal">Market/Date
-            <svg class="table__cell-head-arr" style="margin: 0 0 0 4px;" width="6" height="8" viewBox="0 0 6 8" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M5.86338 3.74894C6.06488 3.99981 6.04068 4.38035 5.80935 4.59887L3.37001 7.84701L3.36491 7.85187C3.16243 8.04303 2.86838 8.04686 2.66309 7.87675C2.6518 7.86737 2.64073 7.85746 2.62999 7.84701L0.190654 4.59887C-0.0406818 4.38035 -0.0648789 3.99981 0.136618 3.74894C0.338115 3.49806 0.689025 3.47182 0.92047 3.69031L2.44455 6.07412L2.44455 0.602408C2.44455 0.269701 2.69325 0 3.00011 0C3.30697 0 3.55566 0.269701 3.55566 0.602408L3.55566 6.07391L5.07953 3.69031C5.31097 3.47182 5.66188 3.49806 5.86338 3.74894Z" />
-            </svg>
-          </th>
-          <th class="table__cell-head table__cell-head--tal"> Amount</th>
-          <th class="table__cell-head table__cell-head--tar">Price</th>
-        </tr>
-      </thead>
-      <tbody class="table__body table__body--none-shadow"
-        infiniteScroll
-        [infiniteScrollDistance]="2"
-        [infiniteScrollDisabled]="!isMobile || (orderItems$ | async).length === (countOfEntries$ | async)"
-        (scrolled)="changePage(currentPage + 1)"
-      >
-        <!-- t-row start-->
-        <ng-container *ngFor="let item of orderItems$ | async">
-          <tr class="table__row--mob" [attr.data-id]="item.id" (click)="toggleDetails($event)">
-            <td class="table__cell table__cell--tal">
-              <div>{{item.currencyPairName}}</div>
-              <div class="table__date-time">
-                <div>{{item.dateCreation | date:"EEEEEE"}} {{item.dateCreation | date:"dd.MM.yyyy"}}</div>
-                <div>{{item.dateCreation | date:"HH:mm:ss"}}</div>
-              </div>
-            </td>
-            <td class="table__cell table__cell--tal">
-              <span>{{item.amountConvert}}</span>
-            </td>
-            <td class="table__cell table__cell--tar">
-              <div>{{item.exExchangeRate}}</div>
-              <span class="txt-small txt-red">{{item.operationType}}</span>
-            </td>
-            <td class="table__cell table__cell--arr-mob">
-              <img class="" src="../../assets/img/arr-toggler-down-blue.svg">
-            </td>
+    <div
+      #scrollContainer
+      [ngStyle]="tableScrollStyles"
+      infiniteScroll
+      [infiniteScrollDistance]="2"
+      [infiniteScrollThrottle]="50"
+      [scrollWindow]="false"
+      [horizontal]="false"
+      (scrolled)="loadMoreOrders()"
+    >
+      <table class="table table--mob">
+        <thead class="table__head">
+          <tr class="table__head-row">
+            <th class="table__cell-head table__cell-head--tal">Market/Date
+              <svg class="table__cell-head-arr" style="margin: 0 0 0 4px;" width="6" height="8" viewBox="0 0 6 8" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.86338 3.74894C6.06488 3.99981 6.04068 4.38035 5.80935 4.59887L3.37001 7.84701L3.36491 7.85187C3.16243 8.04303 2.86838 8.04686 2.66309 7.87675C2.6518 7.86737 2.64073 7.85746 2.62999 7.84701L0.190654 4.59887C-0.0406818 4.38035 -0.0648789 3.99981 0.136618 3.74894C0.338115 3.49806 0.689025 3.47182 0.92047 3.69031L2.44455 6.07412L2.44455 0.602408C2.44455 0.269701 2.69325 0 3.00011 0C3.30697 0 3.55566 0.269701 3.55566 0.602408L3.55566 6.07391L5.07953 3.69031C5.31097 3.47182 5.66188 3.49806 5.86338 3.74894Z" />
+              </svg>
+            </th>
+            <th class="table__cell-head table__cell-head--tal"> Amount</th>
+            <th class="table__cell-head table__cell-head--tar">Price</th>
           </tr>
-          <tr [id]="item.id" class="table__details">
-            <td class="table__details-cell" colspan="4">
+        </thead>
+        <tbody class="table__body table__body--none-shadow">
+          <!-- t-row start-->
+          <ng-container *ngFor="let item of orderItems$ | async">
+            <tr class="table__row--mob" [attr.data-id]="item.id" (click)="toggleDetails($event)">
+              <td class="table__cell table__cell--tal">
+                <div>{{item.currencyPairName}}</div>
+                <div class="table__date-time">
+                  <div>{{item.dateCreation | date:"EEEEEE"}} {{item.dateCreation | date:"dd.MM.yyyy"}}</div>
+                  <div>{{item.dateCreation | date:"HH:mm:ss"}}</div>
+                </div>
+              </td>
+              <td class="table__cell table__cell--tal">
+                <span>{{item.amountConvert}}</span>
+              </td>
+              <td class="table__cell table__cell--tar">
+                <div>{{item.exExchangeRate}}</div>
+                <span class="txt-small txt-red">{{item.operationType}}</span>
+              </td>
+              <td class="table__cell table__cell--arr-mob">
+                <img class="" src="../../assets/img/arr-toggler-down-blue.svg">
+              </td>
+            </tr>
+            <tr [id]="item.id" class="table__details">
+              <td class="table__details-cell" colspan="4">
 
-              <div class="table__details-item">
-                <div class="table__details-item-title">Order id</div>
-                <div class="table__details-item-value">{{item.id}}</div>
-              </div>
-              <div class="table__details-item">
-                <div class="table__details-item-title">Total Price</div>
-                <div class="table__details-item-value">{{item.amountWithCommission}}</div>
-              </div>
-              <div class="table__details-item">
-                <div class="table__details-item-title">Type</div>
-                <div class="table__details-item-value"><span class="txt-green">{{item.operationType}}</span></div>
-              </div>
-              <div class="table__details-item">
-                <div class="table__details-item-title">Fee</div>
-                <div class="table__details-item-value">{{item.commissionValue}}% ~ {{item.commissionFixedAmount}} {{item.currencyPairName | splitCurrency: 2}}</div>
-              </div>
-              <div class="table__details-item">
-                <div class="table__details-item-title">
-                  <button 
-                    class="btn btn--small btn--empty-red"
-                    style="width: 100%; max-width: 58px;"
-                    (click)="onShowCancelOrderConfirm(item.id)"
-                  >Cancel</button>
-                  <div class="revoke-request" *ngIf="showCancelOrderConfirm === item.id">
-                    <div class="revoke-request__title">Are you sure you want to cancel selected order?</div>
-                    <div class="revoke-request__button-wrap">
-                      <button class="btn btn&#45;&#45;small" (click)="cancelOrder(item)">Yes</button>
-                      <button class="btn btn&#45;&#45;small" (click)="onShowCancelOrderConfirm(null)">No</button>
+                <div class="table__details-item">
+                  <div class="table__details-item-title">Order id</div>
+                  <div class="table__details-item-value">{{item.id}}</div>
+                </div>
+                <div class="table__details-item">
+                  <div class="table__details-item-title">Total Price</div>
+                  <div class="table__details-item-value">{{item.amountWithCommission}}</div>
+                </div>
+                <div class="table__details-item">
+                  <div class="table__details-item-title">Type</div>
+                  <div class="table__details-item-value"><span class="txt-green">{{item.operationType}}</span></div>
+                </div>
+                <div class="table__details-item">
+                  <div class="table__details-item-title">Fee</div>
+                  <div class="table__details-item-value">{{item.commissionValue}}% ~ {{item.commissionFixedAmount}} {{item.currencyPairName | splitCurrency: 2}}</div>
+                </div>
+                <div class="table__details-item">
+                  <div class="table__details-item-title">
+                    <button 
+                      class="btn btn--small btn--empty-red"
+                      style="width: 100%; max-width: 58px;"
+                      (click)="onShowCancelOrderConfirm(item.id)"
+                    >Cancel</button>
+                    <div class="revoke-request" *ngIf="showCancelOrderConfirm === item.id">
+                      <div class="revoke-request__title">Are you sure you want to cancel selected order?</div>
+                      <div class="revoke-request__button-wrap">
+                        <button class="btn btn&#45;&#45;small" (click)="cancelOrder(item)">Yes</button>
+                        <button class="btn btn&#45;&#45;small" (click)="onShowCancelOrderConfirm(null)">No</button>
+                      </div>
+                      <div class="revoke-request__triangle"></div>
                     </div>
-                    <div class="revoke-request__triangle"></div>
                   </div>
                 </div>
-              </div>
+              </td>
+            </tr>
+          </ng-container>
+          <tr class="table__row--mob" *ngIf="!(orderItems$ | async).length">
+            <td class="table__cell table__cell--tal" colspan="4">
+              No matching records found
             </td>
           </tr>
-        </ng-container>
-        <tr class="table__row--mob" *ngIf="!(orderItems$ | async).length">
-          <td class="table__cell table__cell--tal" colspan="4">
-            No matching records found
-          </td>
-        </tr>
-        <!-- t-row end-->
-      </tbody>
-    </table>
+          <!-- t-row end-->
+        </tbody>
+      </table>
+    </div>
+
     <!--filter-popup start-->
     <div class="filters-popup" [ngClass]="{'show-filter-popup': showFilterPopup}">
       <div class="filters-popup__header">
