small fixes in balances

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -14,7 +14,7 @@
         [currTab]="currTab"
         [cryptoCurrenciesForChoose]="cryptoCurrenciesForChoose$ | async"
         [fiatCurrenciesForChoose]="fiatCurrenciesForChoose$ | async"
-        (onToggleAllZero)="onToggleAllZero($event)"
+        (onToggleAllZero)="onToggleAllZeroMobile($event)"
         (onLoadMore)="loadMoreBalancesForMobile($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
@@ -39,7 +39,7 @@
         [currTab]="currTab"
         [cryptoCurrenciesForChoose]="cryptoCurrenciesForChoose$ | async"
         [fiatCurrenciesForChoose]="fiatCurrenciesForChoose$ | async"
-        (onToggleAllZero)="onToggleAllZero($event)"
+        (onToggleAllZero)="onToggleAllZeroMobile($event)"
         (onLoadMore)="loadMoreBalancesForMobile($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
