added routing for mobile balance pages and added guard to forbid go on router on desktop mode

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -6,7 +6,6 @@
         *ngSwitchCase="Tab.CRYPTO"
         [balances]="cryptoBalances$ | async"
         [countOfPendingRequests]="countOfPendingRequests$ | async"
-        [selectedItem]="selectedBalance$ | async"
         [countPerPage]="countPerPage"
         [countOfEntries]="getCountOfEntries() | async"
         [currentPage]="currentPage"
@@ -14,24 +13,19 @@
         [currTab]="currTab"
         [cryptoCurrenciesForChoose]="cryptoCurrenciesForChoose$ | async"
         [fiatCurrenciesForChoose]="fiatCurrenciesForChoose$ | async"
+
         (onToggleAllZero)="onToggleAllZeroMobile($event)"
         (onLoadMore)="loadMoreBalancesForMobile($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
         (onSelectTab)="onSelectTab($event)"
         (filterByCurrencyForMobile)="filterByCurrencyForMobile($event)"
-        (onBuyCurrency)="onBuyCurrency($event)"
-        (onLoadBalanceConfirmInfo)="onLoadBalanceConfirmInfo($event)"
-        (onResetBalanceConfirmInfo)="onResetBalanceConfirmInfo($event)"
-        (transferOut)="goToTransferPopup($event)"
-        (cryptoWithdrawOut)="goToCryptoWithdrawPopup($event)"
-        (cryptoDepositOut)="goToCryptoDepositPopup($event)"
+        (onGoToBalanceDetails)="onGoToBalanceDetails($event)"
       ></app-balance-mob>
       <app-balance-mob
         *ngSwitchCase="Tab.FIAT"
         [balances]="fiatBalances$ | async"
         [countOfPendingRequests]="countOfPendingRequests$ | async"
-        [selectedItem]="selectedBalance$ | async"
         [countPerPage]="countPerPage"
         [countOfEntries]="getCountOfEntries() | async"
         [currentPage]="currentPage"
@@ -39,33 +33,15 @@
         [currTab]="currTab"
         [cryptoCurrenciesForChoose]="cryptoCurrenciesForChoose$ | async"
         [fiatCurrenciesForChoose]="fiatCurrenciesForChoose$ | async"
+
         (onToggleAllZero)="onToggleAllZeroMobile($event)"
         (onLoadMore)="loadMoreBalancesForMobile($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
         (onSelectTab)="onSelectTab($event)"
         (filterByCurrencyForMobile)="filterByCurrencyForMobile($event)"
-        (onBuyCurrency)="onBuyCurrency($event)"
-        (onLoadBalanceConfirmInfo)="onLoadBalanceConfirmInfo($event)"
-        (onResetBalanceConfirmInfo)="onResetBalanceConfirmInfo($event)"
-        (transferOut)="goToTransferPopup($event)"
-        (cryptoWithdrawOut)="goToCryptoWithdrawPopup($event)"
-        (cryptoDepositOut)="goToCryptoDepositPopup($event)"
+        (onGoToBalanceDetails)="onGoToBalanceDetails($event)"
       ></app-balance-mob>
-      <app-pending-request-mob
-        *ngSwitchCase="Tab.PR"
-        [pendingRequests]="pendingRequests$ | async"
-        [countPerPage]="countPerPage"
-        [countOfEntries]="getCountOfEntries() | async"
-        [currentPage]="currentPage"
-        [Tab]="Tab"
-        [currTab]="currTab"
-        (onLoadMore)="loadMoreBalancesForMobile($event)"
-        (openRefillBalancePopup)="openRefillBalancePopup($event)"
-        (openSendMoneyPopup)="openSendMoneyPopup($event)"
-        (onSelectTab)="onSelectTab($event)"
-        (onRevokePendingRequest)="onRevokePendingRequest($event)"
-      ></app-pending-request-mob>
     </ng-container>
   </div>
   <!--balance-mob end-->
