--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,12 +2,12 @@
   <div class="footer__inner">
     <div class="footer__inner-top">
       <ul class="footer__menu">
-        <li class="footer__menu-item"><a class="footer__menu-link" href="https://exrates.me/termsAndConditions"> Terms and Conditions</a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="https://exrates.me/privacyPolicy">Privacy Policy</a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="https://exrates.me/contacts">Contacts and Support </a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="https://exrates.me/aboutUs">About us</a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="https://exrates.me/partners">Submit a coin for listing</a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Referral</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" [routerLink]="['/static/terms-and-conditions']"> Terms and Conditions</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" [routerLink]="['/static/privacy-policy']">Privacy Policy</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" [routerLink]="['/static/contacts']">Contacts and Support </a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" [routerLink]="['/static/about-us']">About us</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="https://coins.exrates.me/">Submit a coin for listing</a></li>
+        <!-- <li class="footer__menu-item"><a class="footer__menu-link" href="#">Referral</a></li> -->
       </ul>
       <div class="footer__app-wrap">
         <div class="footer__app-title">Mobile applications:</div>
